# nonebot-plugin-afd

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: codecov.yml  release.yml
nonebot_plugin_afd/: __init__.py  config.py  group_new_member.py  order_notice.py  utils.py
tests/: conftest.py  events.json  test_new_member.py  test_webhook.py
